[package]
name = "git-timer"
version = "0.1.0"
authors = ["Reiya <reiya0104@ezweb.ne.jp>"]
edition = "2021"

description = "Time tracking by git commit message"

# homepage = "https://serde.rs/"
repository = "https://github.com/reiya0104/git-timer"

readme = "README.md"

keywords = ["time tracking", "timer", "git"]
categories = ["Date and time", "Development tools"]
license = "MIT OR Apache-2.0"

[badges]
github = { repository = "reiya0104/git-timer", workflow = "Rust" }
maintenance = { status = "actively-developed" }

[dependencies]
